--- a/force-app/main/default/lwc/accountMap/accountMap.html
+++ b/force-app/main/default/lwc/accountMap/accountMap.html
@@ -1,19 +1,10 @@
 <template>
-    <div class="slds-card">
-        <template if:true={markers.length}>
-            <lightning-map
-                map-markers={markers}
-                zoom-level={zoomLevel}
-            ></lightning-map>
-        </template>
-        <template if:false={markers.length}>
-            <c-error-panel friendly-message="No address to map"></c-error-panel>
-        </template>
-        <template if:true={error}>
-            <c-error-panel
-                friendly-message="Error retrieving map data"
-                errors={error}
-            ></c-error-panel>
-        </template>
+    <div>
+        <div>Name: {name}</div>
+        <div>Description: {description}</div>
+        <div>Category: {category}</div>
+        <div>Material: {material}</div>
+        <div>Price: {price}</div>
+        <div><img src={pictureUrl}/></div>
     </div>
 </template>
